# customkernel

./: COLAB_QUICKSTART.md  DEMO_LOOP.md  interactive_kernel_README.md  pyproject.toml
interactive_kernel/: __init__.py  engine.py  kernel.py  magics.py  panel.py  tunables.py
interactive_kernel/ik-pkg/: ikctl.py  install.py
interactive_kernel/ik-pkg/interactive_kernel/: __init__.py  __main__.py  engine.py  magics.py
