[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "interactive-kernel"
version = "0.2.0"
description = "Jupyter kernel with pausable execution: pause, edit live variables, resume"
requires-python = ">=3.9"
dependencies = ["anywidget>=0.9"]

[project.optional-dependencies]
kernel = ["ipykernel>=6.29", "jupyter_client>=8"]

[tool.setuptools.packages.find]
include = ["interactive_kernel*"]
